exports[`comp should make traits available to style objects 1`] = `
Object {
  "child": "bc-ebf1f3",
  "root": "c-1bab6b",
}
`;

exports[`comp should make traits available to style objects 2`] = `
Object {
  "child": Object {
    "backgroundColor": "#ebf1f3",
  },
  "root": Object {
    "color": "#1bab6b",
  },
}
`;

exports[`comp should turn a style object into classes and passes down all styles 1`] = `
Object {
  "child": "bc-green",
  "root": "c-green",
}
`;

exports[`comp should turn a style object into classes and passes down all styles 2`] = `
Object {
  "child": Object {
    "backgroundColor": "green",
  },
  "root": Object {
    "color": "green",
  },
}
`;
